--- a/250509/250509-02.md
+++ b/250509/250509-02.md
@@ -1,7 +1,10 @@
 ---
+title: 测试笔记02
 layout: default
-title: 笔记02的标题 (或者任何您为这个笔记起的标题)
 ---
+这是一个测试笔记文件，原先记录 Liquid 代码的地方已暂时清空。
+
+
 > ![59f221f0-a9fb-4ddd-8026-474864cbfd1a.png](https://cdn.jsdelivr.net/gh/zzkdm888/note-gen-image-sync@main/59f221f0-a9fb-4ddd-8026-474864cbfd1a.png)我怎么将我的笔记变为 github pages ?
 
 您可以按照以下步骤将您仓库里的笔记变为 GitHub Pages 网站：
