新增末日生存种菜指南，包含种子选择、土壤处理、作物选择等。

--- a/250529/末日生存情况下种菜_01.md
+++ b/250529/末日生存情况下种菜_01.md
@@ -2,3 +2,99 @@
 
 
 <br>
+
+
+老乡，这天要是真塌了，咱也得吃饭不是？手里有粮，心里不慌。这菜园子，就是咱末日里的“米其林三星”兼“救命稻草”！甭管是速战速决的小青菜，还是能扛饿的大家伙，种好了，那都是活命的本钱。我这就给你唠唠，咋在这非常时期，伺候好这些“绿色黄金”。
+
+**末日种菜总纲领：活下去，才是硬道理！**
+
+1. **种子是王道，多留心眼儿**：
+
+   * **啥种子好？** 优先选那些“老品种”、“传家宝”种子 (非杂交F1代)。为啥？因为它们结的籽儿，来年还能种，能“传宗接代”。杂交种子很多时候下一代就“变味儿”或者不结果了。
+   * **上哪儿弄？** 现在就得开始屯！买点、跟老辈儿要点。末日里，种子比黄金还珍贵。
+   * **怎么存？** 干燥、避光、低温。用密封袋装好，塞进罐子里，埋地下都行，只要老鼠啃不着。
+2. **土是亲娘，得下功夫**：
+
+   * **没好土咋办？** 搜刮一切有机物！落叶、烂草、厨余（别放肉和油腻的）、动物粪便（得腐熟，不然烧苗），甚至烧完的草木灰（少量，补钾）。搞个“堆肥角”，这就是未来的“化肥厂”。
+   * **地在哪儿？** 房前屋后、阳台天台，能见光的地方都行。容器？破盆烂罐、轮胎、塑料箱，只要底部能打孔排水就行。安全第一，选个隐蔽点儿的地方，别让人一眼瞅见你的“粮仓”。
+3. **水是命根子，精打细算**：
+
+   * **开源节流**：收集雨水是必须的。家里的废水（淘米水、洗菜水，别是带化学清洁剂的）也能用。
+   * **咋浇省水？** 早上或傍晚浇，直接浇根。地表盖点干草、碎叶子，能保湿，还能少长草。
+4. **肥料DIY，自给自足**：
+
+   * **堆肥大法好**：上面说了，这是核心技术。
+   * **草木灰**：少量撒一点，补钾，还能防点虫。
+   * **人尿（稀释！稀释！再稀释！）**：呃，听着不雅，但氮肥杠杠的，稀释10倍以上再用，救急可以。
+5. **低调种菜，高调防贼（人和动物）**：
+
+   * **选址隐蔽**：别太招摇。
+   * **物理屏障**：弄点篱笆、网子，或者种点带刺的植物（比如蔷薇、花椒）在菜地边上。
+   * **分散种植**：鸡蛋别放一个篮子里，多找几个地方种。
+
+**具体到各种蔬菜，咱分门别类聊聊：**
+
+**第一梯队：速战速决型（短期见效，快速补充维生素）**
+
+这些家伙长得快，个把月就能吃上，能快速给你点安慰和营养。
+
+* **小白菜、油菜、生菜、菠菜、苋菜（米苋）**：
+  * **咋种？** 地稍微平整一下，撒籽儿，盖层薄土（别太厚，种子直径的2-3倍就行）。保持湿润，几天就出苗。
+  * **特点**：对肥料要求不高，有点底肥就能长。可以“间苗”吃，嫩苗也好吃。生菜掐叶子吃，还能继续长。
+  * **末日优势**：快！种一批吃一批，茬茬不断。维生素C满满。
+* **樱桃萝卜、小水萝卜**：
+  * **咋种？** 跟青菜差不多，撒籽儿，稍微深一点点。它们喜欢松软的土。
+  * **特点**：二十多天到一个月就能拔。
+  * **末日优势**：除了叶子能吃（嫩叶可以凉拌或做汤），小萝卜也能快速提供一点碳水和爽脆口感。
+
+**第二梯队：能量储备型（长期作物，扛饿主力）**
+
+这些是硬通货，能顶饱，还能存一段时间。
+
+* **土豆（马铃薯）**：
+  * **咋种？** 把发芽的土豆切块，每块保证有1-2个芽眼。晾干切口（或者沾点草木灰防腐），然后埋土里，大概10-15厘米深。出苗后，土豆会往上长，需要不断在根部培土，土豆才能结得多。
+  * **特点**：适应性强，产量高。
+  * **末日优势**：绝对的能量来源！秋天收了能存一冬天。土豆皮也别浪费，可以堆肥。
+* **红薯（地瓜）**：
+  * **咋种？** 找个红薯，让它发芽，长出红薯藤。剪下藤，每段带几个叶节，斜插到土里就能活。它喜欢沙质土壤和温暖环境。
+  * **特点**：耐旱耐瘠，产量惊人。红薯叶也能当菜吃，营养丰富。
+  * **末日优势**：从叶子到块根都能吃，生命力顽强，地下部分还能躲过一些小灾小难。
+* **豆类（芸豆、豇豆、豌豆、蚕豆，尤其是能收干豆的品种）**：
+  * **咋种？** 点播，挖小坑，每个坑放2-3粒种子。大部分豆类需要搭架子让它们爬。
+  * **特点**：豆子是优质蛋白质来源。它们还有“固氮”能力，能改良土壤。
+  * **末日优势**：嫩豆荚可以当菜吃，长老了收干豆，是重要的蛋白质和能量储备，能存很久。
+* **南瓜、冬瓜**：
+  * **咋种？** 种子点播。它们需要比较大的生长空间，藤蔓会爬很远。可以种在墙角、荒地。
+  * **特点**：产量高，一个大南瓜能吃好几顿。皮厚，耐储存。
+  * **末日优势**：超级耐放！放个大半年不成问题。南瓜籽也能吃，炒熟了香。
+
+**第三梯队：营养补充与风味型（让末日餐桌不那么单调）**
+
+* **番茄（西红柿）、辣椒**：
+  * **咋种？** 最好先育苗，等苗壮了再移栽。它们需要充足的阳光和水肥，结果期要多施点磷钾肥（草木灰就是好东西）。需要搭架支撑。
+  * **特点**：维生素丰富，能显著改善伙食风味。
+  * **末日优势**：新鲜的番茄辣椒能提供宝贵的维生素C和开胃的风味。辣椒还能晒干保存。注意留好熟透的果实里的种子。
+* **大蒜、洋葱、韭菜**：
+  * **咋种？** 大蒜用蒜瓣种，洋葱可以用小鳞茎或者种子，韭菜可以分根或者播种。它们有一定的驱虫效果。
+  * **特点**：是重要的调味品，也有一定的杀菌作用。韭菜割了还能长，是“懒人菜”。
+  * **末日优势**：不仅能吃，还能给食物提味，增加食欲。大蒜洋葱也能储存。韭菜种一次能吃好几年。
+
+**第四梯队：泼辣坚韧型（不怎么管也能活）**
+
+* **苋菜（不是米苋，是那种长老了杆子红红的，籽是黑色的）**：
+  * **咋种？** 撒籽就行，它自己就能长得很好，还很会自己播种，明年可能就长出一大片。
+  * **特点**：非常耐贫瘠和干旱，嫩叶和籽都能吃（籽可以像小米一样煮粥）。
+  * **末日优势**：几乎不用管，自己就能繁衍，是真正的“救荒菜”。
+* **某些野菜（蒲公英、马齿苋、荠菜等 - 前提是你认识！）**：
+  * **咋种？** 很多时候不用种，它们自己就在角落里长。如果想扩大规模，可以采集种子撒播。
+  * **注意**：**不认识的野菜千万别乱吃！这是保命的铁律！**
+  * **末日优势**：无需太多照料，是天然的维生素和矿物质补充。
+
+**末日种菜小窍门，关键时刻能救命：**
+
+* **留种！留种！留种！** 重要的事说三遍。每回收获，务必留下最好、最饱满的果实专门用来做种。等果实完全成熟干透了再取籽。
+* **轮作换茬**：一块地别年年种一样东西，容易生病长虫，地力也跟不上。比如今年种豆子，明年种白菜。
+* **伴生种植**：有些植物种在一起能互相帮助。比如大蒜洋葱种在番茄旁边能驱虫。
+* **简易温棚/遮阳网**：有条件的话，用塑料布搭个小棚能提早播种、延长收获期。夏天太晒，弄点树枝、破布搭个架子遮遮阴。
+
+兄弟，末日里，耐心和智慧比啥都重要。这些菜，就像你的士兵，好好待它们，它们就能保你的江山。记住，只要手不懒，地不荒，咱就能把这日子过下去！祝你好运！
